# MPCompress

./: .gitignore  README.md  README_DEV.md  pyproject.toml
config/: MPC12-VQGAN-from-MPC2.yaml
docker/: Dockerfile_compressai_llama3  Dockerfile_dinov2  Dockerfile_llama3  Dockerfile_sd3
examples/SEI/: README.md
examples/SEI/demo/: SEI_000000001761.json  object_detection.ipynb  video_understand_with_SEI.ipynb
examples/SEI/scripts/: 00_prepare_dataset.py  00_select_images.py  (+2 more)
examples/fcm-lm/: README.md  eval_hyper.py  fc_hyper.py  fc_vtm.py  run_dinov2-cls_hyper_cls.py  run_dinov2-cls_vtm_cls.py  run_dinov2-seg_vtm_seg.py  sample_imagenet_per_class.py  test_checkpoint.py  train_hyper.py
examples/mpc/: README.md  eval_cls.py  eval_config.yaml  run_eval_mpc.py  run_eval_slide.py  run_mpc.py  run_mpc_eval.py
mpcompress/: dinolic.py  loss.py  models.py  vq_model.py  vqlic.py
mpcompress/backbone/: __init__.py  base.py
mpcompress/datasets/: __init__.py  feature.py  image.py
mpcompress/eval/: run_dinov2-cls_hyper_cls.py  run_dinov2-cls_vtm_cls.py  run_mpc.py
mpcompress/heads/: __init__.py  dinov2_heads.py
mpcompress/latent_codecs/: __init__.py  ctx_hyper.py  hyperprior.py  vit_feature_codec.py  vtm.py
mpcompress/layers/: layers.py  vit.py
mpcompress/losses/: loss.py
mpcompress/metrics/: __init__.py  cv_metrics.py  iqa_metrics.py  metrics.py  utils.py
mpcompress/models/: __init__.py  hyperprior.py  lamofc.py  mpc.py  no_compress.py
mpcompress/token_codecs/: __init__.py  base.py
mpcompress/utils/: binary_coding.py  coder.py  debug.py  syntax_helper.py  tensor_ops.py  utils.py
tests/: test_rectangular_vit.py  test_slide_inference.py
utils/: arc2json.py  coco_caption_processing.py  coco_copy.py  feat_shape.py  imagenet_file_copy.py  max_min.py  preprocessing.py  sd3_visualize.py  state_dict_rename.py
(+57 files in other folders)
